**App update:**

- UI (User interface) updates: Reader
- Update dependencies (parsers)

**Parsers update:**

- [DexHentai + Manhwa18] Fix "Content not found or removed" errors
- [MangaTime] Broken fixes
- [Kiryuu] Fix url errors
- [Flamecomics] Reverse chapters fix
- [SadScans] Fix "Cannot find .summary" errors
- [Komiktap] Fix missing images error
- [Birdtoon] Fix missing chapters list
- [KomikCast] Fix chain validation failed errors
- [AnimeH] Fix value errors
- [SussyScan] Fixes
- [ComicExtra] Fixes
- Changed sources domain: KomikCast, CosmicScans, Kiryuu, Sussyscan,...