@@ -749,7 +749,15 @@
     <string name="pages_saved">Đã lưu trang</string>
     <string name="delete_old_backups">Xóa bản sao lưu cũ</string>
     <string name="delete_old_backups_summary">Tự động xóa các bản sao lưu cũ để tiết kiệm bộ nhớ của thiết bị</string>
-    <string name="handle_links">Xử lí liên kết (Link)</string>
-    <string name="handle_links_summary">Xử lý các liên kết (Link) manga từ các ứng dụng bên ngoài (Ví dụ: trình duyệt web,...). Có thể bạn cũng cần phải bật thủ công trong cài đặt hệ thống</string>
+    <string name="handle_links">Xử lý liên kết (Link)</string>
+    <string name="handle_links_summary">Xử lý các liên kết (Link) truyện từ các ứng dụng bên ngoài (Ví dụ: Chrome,...). Có thể bạn cũng cần phải bật thủ công trong cài đặt hệ thống</string>
     <string name="email">E-mail</string>
+    <string name="captcha_required_message">Nguồn đang yêu cầu xác thực CAPTCHA để có thể tiếp tục sử dụng</string>
+    <string name="author">Tác giả</string>
+    <string name="rating">Đánh giá</string>
+    <string name="source">Nguồn</string>
+    <string name="error_connection_reset">Kết nối đã được đặt lại bởi máy chủ</string>
+    <string name="translation">Bản dịch</string>
+    <string name="show_slider">Hiện thanh trượt</string>
+	<string name="incognito">Ẩn danh</string>
 </resources>
