@@ -28,7 +28,7 @@
     <string name="captcha_solve">开始验证</string>
     <string name="today">今天</string>
     <string name="clear_cookies">清除 Cookies</string>
-    <string name="new_sources_text">发现了新的可用漫画源</string>
+    <string name="new_sources_text">发现了新的可用图源</string>
     <string name="suggestions_summary">根据你的喜好推荐漫画</string>
     <string name="suggestions_info">所有数据都在本地分析，不会发送至任何地方</string>
     <string name="never">从不</string>
@@ -753,4 +753,8 @@
     <string name="handle_links_summary">处理来自外部程序的漫画链接（如 Web 浏览器）， 可能需要在程序的系统设置中手动开启</string>
     <string name="email">电子邮箱</string>
     <string name="captcha_required_message">此图源需要通过验证以继续操作</string>
+    <string name="author">作者</string>
+    <string name="rating">评分</string>
+    <string name="source">来源</string>
+    <string name="translation">翻译</string>
 </resources>
